# aep_parser

./: .gitattributes  .gitignore  CONTRIBUTING.md  flags_tutorial.md  mkdocs.yml  pyproject.toml  pytest.ini  readme.md  setup.py  tmp_all_diffs.txt  tmp_analyze_diffs.py  tmp_analyze_diffs2.py  tmp_categorize2.py  tmp_categorize3.py  tmp_categorize4.py  tmp_categorize_diffs.py  tmp_check_defs.py  tmp_check_defs2.py  tmp_check_dims.py  tmp_check_part.py  tmp_check_part2.py  tmp_check_tdb4.py  tmp_check_tdb4b.py  tmp_deep_inspect.py  tmp_deep_result.txt  tmp_diffs_full.txt  tmp_diffs_only.txt  tmp_effects_inspect.py  tmp_effects_result.txt  tmp_find_effects.py  tmp_find_effects_result.txt  tmp_inspect2.py  tmp_inspect2_result.txt  tmp_inspect_json.py  tmp_inspect_layer.py  tmp_inspect_result.txt  tmp_json_struct.py  tmp_marker_check.py  tmp_marker_chunks.txt  tmp_pvt_compare.py  (+14 more)
.github/: FUNDING.yml  changelog-config.json  copilot-instructions.md  dependabot.yaml  dependabot.yml
.github/agents/: aep-dev.agent.md  architect.agent.md  serialize.agent.md  skeptic.agent.md
.github/workflows/: changelog.yml  docs.yml  quality.yml  release.yml
docs/: cli.md  contributing.md  differences.md  extendscript_coverage.md  flags_tutorial.md  index.md  limitations.md  quickstart.md
docs/api/: app.md  application.md  enums.md  index.md  parsers.md  project.md
docs/guides/: contributing.md  flags_tutorial.md
docs/stylesheets/: extra.css
memories/session/: accuracy_improvement.md
samples/: 01_empty.aep  02_comp.aep  03_solid.aep  32bpc.aep  8bpc.aep  Property-01.aep  asset_names.aep  base.aep  comment.aep  comp_23.976.aep  comp_names.aep  comp_start_at_5.aep  comp_start_at_6.aep  complex_marker.aep  complex_marker_2.aep  complex_marker_navigation.aep  dissolve.aep  env.aep  expression_disabled.aep  expression_enabled.aep  folder_names.aep  footageTimecodeDisplayStartType.aep  frame_numbers.aep  gaussian_blur_modified.aep  gaussian_blur_untouched.aep  huge_solid.aep  image_names.aep  image_sequence.aep  in_point_10.aep  layer_duration_250.aep  layer_duration_251.aep  layer_start_0.aep  layer_start_1.aep  layer_start_2.aep  marker.aep  marker_00.aep  marker_01.aep  marker_24.aep  marker_250000.aep  marker_45.aep  (+36 more)
samples/assets/: config.ocio  crystal.fbx  mov_23_976.mov  mov_23_976_no_audio.mov  prefs_indep_output.txt
samples/bugs/: 29.97_fps_time_scale_3.125.aep  29.97_fps_time_scale_3.125.json  windows-1250_decoding_error.aep  windows-1250_decoding_error.json
samples/essential_graphics/: base.aep  base.json  color_controller.aep  controller_renamed.aep  controller_renamed.json  custom_template_name.aep  custom_template_name.json  dropdown_controller.json  fill_and_opacity_added.aep  fill_and_opacity_added.json  fill_color_added.aep  fill_color_added.json  fill_color_changed_on_comp.aep  fill_color_changed_on_comp.json  fill_color_renamed.aep  fill_color_renamed.json  multiple_controllers.json  point_controller.aep  point_controller.json  slider_controller.aep  transform_opacity.aep  transform_opacity.json  transform_position.aep  transform_position.json  two_layers.aep  two_layers.json
samples/roundtrip/: comp_flags.aep  comp_flags.json  comp_settings.aep  comp_settings.json  comp_timing.aep  comp_timing.json  everything.aep  everything.json  items.aep  items.json  layer_flags.aep  layer_flags.json  layer_timing.aep  layer_timing.json  masks.json  project_settings.aep  project_settings.json  render_queue.aep  render_queue.json  results.txt
scripts/: analyze_ldat_structure.py  analyze_output_module.py  analyze_render_ldat.py  compare_aep.py  compare_render_queue_binary.py  dump_output_profile_ids.py  generate_color_space_mapping.py  generate_roundtrip_files.py  griffe_properties.py  print_output_color_space.py  validate_aep.py  visualize_project.py  xmp_utils.py
scripts/jsx/: batch_export_json.jsx  export_project_json.jsx  export_value_at_time.jsx  generate_essential_graphics_samples.jsx  json2.jsx  (+4 more)
tests/: conftest.py  test_29_97fps.py  test_aep_parser.py  test_cli_compare.py  test_cli_validate.py  test_cli_visualize.py  test_cos_bom.py  test_cos_bom_edge_cases.py  test_cos_string_bom.py  test_dummy.py  test_format_options.py  test_models_application.py  test_models_composition.py  test_models_folder.py  test_models_footage.py  test_models_item.py  test_models_layer.py  test_models_marker.py  test_models_project.py  test_models_property.py  test_models_renderqueue.py  test_models_selection.py  test_models_text.py  test_parsers_project.py  test_prefs_indep_output.py  test_render_settings.py  test_roundtrip_composition.py  test_roundtrip_project.py  test_samples_parsing.py  test_value_at_time.py  test_versions.py  test_view_options.py
(+2238 files in other folders)
